<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context="com.tab39e.lo.MainActivity" >
    
<ImageView
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:contentDescription="@string/desc"
    android:scaleType="fitXY"
    android:src="@drawable/headerlogo" />

<TextView
    android:id="@+id/HeadText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    android:text="@string/ip_sett"
    android:textColor="#fff"
    android:textSize="22sp"
    android:textStyle="bold" />

<RadioGroup
    android:id="@+id/ip_radiobtn"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >
          
          <RadioButton
              android:id="@+id/live"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="30dp"
              android:checked="true"
              android:gravity="center"
              android:paddingLeft="15dp"
              android:paddingRight="5dp"
              android:scaleX="0.7"
              android:scaleY="0.7"
              android:text="@string/live"
              android:textColor="#fff"
              android:textSize="18sp"
              android:textStyle="normal" />
          
          <RadioButton
              android:id="@+id/test"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="30dp"
              android:layout_weight="0"
              android:gravity="center"
              android:paddingLeft="15dp"
              android:paddingRight="10dp"
              android:text="@string/test"
              android:textColor="#fff"
              android:textSize="18sp"
              android:textStyle="normal" />
        
      </RadioGroup>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="15dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/serverurl"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />
    
 <EditText
     android:id="@+id/servr_url"
     android:layout_width="fill_parent"
     android:layout_height="40dp"
     android:layout_gravity="center"
     android:layout_marginLeft="10dp"
     android:background="@drawable/edittext_style"
     android:gravity="center_horizontal|center"
     android:hint="@string/server_url"
     android:inputType="textUri"
     android:text="http://192.168.11.55:8080"
     android:textColor="#ffffff"
     android:textSize="14sp" />

 </LinearLayout>
 
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="20dp"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ftp_url"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold" />
    
 <EditText
     android:id="@+id/ftp_url"
     android:layout_width="fill_parent"
     android:layout_height="40dp"
     android:layout_gravity="center"
     android:layout_marginLeft="22dp"
     android:background="@drawable/edittext_style"
     android:gravity="center_horizontal|center"
     android:hint="@string/server_url"
     android:inputType="textUri"
     android:text="http://192.168.11.55:8080"
     android:textColor="#ffffff"
     android:textSize="14sp" />

 </LinearLayout>

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="60dp"
     android:layout_marginTop="10dp"
     android:orientation="horizontal"
     android:weightSum="1" >
     
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_gravity="center"
         android:layout_margin="50dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_weight="0.5"
         android:background="@drawable/buttonstyle"
         android:padding="0dp"
         android:text="@string/back"
         android:textColor="#000000"
         android:textSize="16sp" />
     
     <Button
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_gravity="center"
         android:layout_margin="50dp"
         android:layout_weight="0.5"
         android:background="@drawable/buttonstyle"
         android:padding="0dp"
         android:text="@string/save"
         android:textColor="#000000"
         android:textSize="16sp" />
     
</LinearLayout>

 	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="0dp"
    android:gravity="bottom|center"
    android:orientation="vertical" >

<!-- <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:gravity="center"
    android:text="An Integrated Petty case CP Act under the Hyderabad Policing System"
    android:textColor="#FF0000"
    android:textSize="18sp"
    android:textStyle="bold" /> -->

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="0dp"
         android:gravity="center"
         android:text="DEVELOPED BY MOTHER TECHNOLOGIES PROJECT VENTURES"
         android:textColor="#cccccc"
         android:textSize="10sp"
         android:textStyle="bold" />

  </LinearLayout>

</LinearLayout>
