<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/desc"
        android:scaleType="fitXY"
        android:src="@drawable/headerlogo" />
   
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/section_heading"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />
     
   <LinearLayout 
         android:id="@+id/ll1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">   
   
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/list_heading"
           android:textColor="#fff"
           android:textSize="16sp"
           android:textStyle="bold" />
     
 	<ListView
 	    android:id="@+id/mylist"
 	    android:layout_width="fill_parent"
 	    android:layout_height="240dp"
 	    android:layout_marginTop="10dp"
 	    android:fadeScrollbars="false"
 	    android:textColor="#fff" >

</ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="*** Please Click on Section Name to Select Section ***"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:textStyle="bold" />
     
   </LinearLayout>
    
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:orientation="vertical" >

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="left"
       android:layout_marginTop="5dp"
       android:text="Brief Facts :"
       android:textColor="#ffffff"
       android:textSize="16sp"
       android:textStyle="bold" />
	
<EditText
    android:id="@+id/decription_text"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/bgcolor"
    android:gravity="left|top"
    android:hint="@string/descript_hint"
    android:maxLines="5"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:textColor="#000"
    android:textSize="14sp" >
      
   </EditText>
          
          
</LinearLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal" >
         
    <LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="5dp"
     android:paddingLeft="10dp"
     android:weightSum="1">

     <ImageView
         android:id="@+id/back_offender"
         android:layout_width="50dp"
         android:layout_height="30dp"
         android:layout_weight="0.1"
         android:contentDescription="@string/desc"
         android:gravity="right"
         android:src="@drawable/back" />
 
 <ImageView
     android:id="@+id/save_offender"
     android:layout_width="50dp"
     android:layout_height="30dp"
     android:layout_weight="0.5"
     android:contentDescription="@string/desc"
     android:gravity="right"
     android:src="@drawable/save" />
 
		<ImageView
		    android:id="@+id/reset_btn"
		    android:layout_width="50dp"
		    android:layout_height="30dp"
		    android:layout_weight="0.3"
		    android:contentDescription="@string/desc"
		    android:gravity="right"
		    android:src="@drawable/reset" />
 		 
 		<!--  <TextView
 		     android:id="@+id/nxt"
 		     android:layout_width="wrap_content"
 		     android:layout_height="wrap_content"
 		     android:layout_gravity="right"
 		     android:layout_marginRight="60dp"
 		     android:layout_marginTop="10dp"
 		     android:textColor="#fff"
 		     android:text="@string/next"
 		     android:textSize="18sp" /> -->
 		 
 		 </LinearLayout>
         
     </LinearLayout>
    
    
    <!-- <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" "
        android:gravity="center_horizontal"
    /> -->
</LinearLayout>
</ScrollView>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="0dp"
    android:gravity="bottom|center"
    android:orientation="vertical" >

<!-- <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:gravity="center"
    android:text="An Integrated Petty case CP Act under the Hyderabad Policing System"
    android:textColor="#FF0000"
    android:textSize="18sp"
    android:textStyle="bold" /> -->

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="0dp"
         android:gravity="center"
         android:text="DEVELOPED BY MOTHER TECHNOLOGIES PROJECT VENTURES"
         android:textColor="#cccccc"
         android:textSize="10sp"
         android:textStyle="bold" />

  </LinearLayout>
</LinearLayout>
