<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/desc"
        android:scaleType="fitXY"
        android:src="@drawable/headerlogo" />
 
     <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/reports"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />
 
          <Spinner
              android:id="@+id/reports_type"
              android:layout_width="180dp"
              android:layout_height="40dp"
              android:layout_gravity="center"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginTop="20dp"
              android:background="@drawable/btns"
              android:entries="@array/reports_menu"
              android:paddingLeft="20dp"
              android:prompt="@string/reports_prompt"
              android:textColor="#ffffff"
              android:textSize="20sp" />
      
         <!-- <Button
             android:id="@+id/add_btn"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_weight="0.4"
             android:background="@drawable/btns"
             android:text="@string/get"
             android:textColor="#fff"
             android:textSize="20sp" /> -->

        <EditText
            android:id="@+id/select_date"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btns"
            android:focusable="false"
            android:gravity="center"
            android:inputType="none"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:hint="Select Report Date"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="16sp" />
          
           <ImageView
               android:id="@+id/report_submit"
               android:layout_width="150dp"
               android:layout_height="40dp"
               android:layout_gravity="center"
               android:layout_marginBottom="20dp"
               android:layout_marginTop="20dp"
               android:contentDescription="@string/desc"
               android:src="@drawable/submit" />
               <TextView
        android:id="@+id/reports_text"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingRight="40dp"
       android:layout_gravity="center"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="20dp"
       android:visibility="gone"
       android:textColor="#fff"
       android:textSize="18sp"/>
      
      <LinearLayout 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          
          <ImageView
              android:id="@+id/back_btn"
              android:layout_width="40dp"
              android:layout_height="35dp"
              android:layout_marginLeft="60dp"
              android:layout_marginTop="20dp"
              android:contentDescription="@string/desc"
              android:gravity="center"
              android:src="@drawable/back" />
      
      <ImageView
          android:id="@+id/report_print"
          android:layout_width="150dp"
          android:layout_height="35dp"
          android:layout_gravity="center"
          android:layout_marginBottom="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="20dp"
          android:contentDescription="@string/desc"
          android:src="@drawable/print"
          android:visibility="gone" />
      
      </LinearLayout>

         <!-- <Button
             android:id="@+id/back_btn"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_weight="0.4"
             android:background="@drawable/btns"
             android:text="@string/back"
             android:textColor="#fff"
             android:textSize="20sp" /> -->

  
  
</LinearLayout>
</ScrollView>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="0dp"
    android:gravity="bottom|center"
    android:orientation="vertical" >

<!-- <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:gravity="center"
    android:text="An Integrated Petty case CP Act under the Hyderabad Policing System"
    android:textColor="#FF0000"
    android:textSize="18sp"
    android:textStyle="bold" /> -->

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="0dp"
         android:text="DEVELOPED BY MOTHER TECHNOLOGIES PROJECT VENTURES"
         android:textColor="#cccccc"
         android:textSize="10sp"
         android:layout_marginBottom="5dp"
         android:textStyle="bold" />

  </LinearLayout>
</LinearLayout>